--- a/PruebaProgreso1_Navarrete/appsettings.json
+++ b/PruebaProgreso1_Navarrete/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DemoEstudianteContextSQLServer": "Server=localhost;Database=PruebaProgreso1_NavarreteContextSQLServer-2d89a3ae-e9de-48fc-8abc-78a7ea682265;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
 }
